--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,17 @@
     <color name="gray_700">#616161</color>
     <color name="gray_900">#212121</color>
 
+    <!-- Status Colors -->
+    <color name="status_green">#2ECC71</color>
+    <color name="status_green_bg">#E8F8F5</color>
+    <color name="status_yellow">#F1C40F</color>
+    <color name="status_yellow_bg">#FEF9E7</color>
+    <color name="status_red">#E74C3C</color>
+    <color name="status_red_bg">#FDEDEC</color>
+    
+    <color name="success_circle_bg">#E8F5E9</color>
+    <color name="success_check">#4CAF50</color>
+
     <color name="colorPrimary">@color/blue_500</color>
     <color name="colorOnPrimary">@color/white</color>
 
