--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -57,7 +57,17 @@
         android:id="@+id/importImageDicFragment"
         android:name="com.group20.codevocab.ui.dictionary.ImportImageDicFragment"
         android:label="Import Vocabulary"
-        tools:layout="@layout/fragment_import_image_dic" />
+        tools:layout="@layout/fragment_import_image_dic" >
+        <action
+            android:id="@+id/action_importImageDicFragment_to_reviewWordFragment"
+            app:destination="@id/reviewWordFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/reviewWordFragment"
+        android:name="com.group20.codevocab.ui.dictionary.ReviewWordFragment"
+        android:label="Review Word"
+        tools:layout="@layout/fragment_review_word" />
 
     <fragment
         android:id="@+id/groupDetailFragment"
